# SSD-Single-Shot-Detector-in-CUDA

./: CMakeLists.txt
